altered pisitioning of dropdown to prevent unwanted shifting

--- a/css/style.css
+++ b/css/style.css
@@ -97,12 +97,12 @@ header {
 }
 
 #destination-menu {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 500px;
-  width: 100%;
-  position: fixed;
+  /* display: flex;
+  flex-direction: column; */
+  /* justify-content: center; */
+  /* align-items: flex-start; */
+  /* height: auto;
+  width: 100%; */
 }
 
 .switchToggle{
@@ -115,15 +115,16 @@ header {
 }
 
 .pathfinder {
+  z-index: 5000;
   width: 90%;
-  height: 15vh;
+  height: 100px;
   background-color: var(--paths);
   display: grid;
   grid-template-areas:  "switchToggle startlabel start go-btn"
                         "switchToggle endlabel end go-btn";
   grid-template-columns: 7% 13% 65% 15%;
   position: fixed;
-  top: 9vh;
+  top: 63px;
   left: 5vw;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
@@ -137,23 +138,19 @@ header {
   padding: 0 0.5rem;
   width: 100%;
   border-radius: 5px;
-
 }
 
 .pathfinder ul li:hover, .pathfinder ul li:focus {
   background-color: #e7e1c6;
 }
 
-li.menuItem.placeholder-start {
-}
-
 .path-start-select, .path-end-select {
-  width: 80%;
+  width: 85%;
   height: auto;
   border-radius: 1vh;
   border: 1.5px solid var(--concrete-path);
-  font-size: 2.7vh;
-  background-color: var(--paths);
+  font-size: 2.5vh;
+  background-color: var(--paths-light);
   padding: 1px 2px;
 }
 
@@ -241,14 +238,13 @@ button {
 
 .destination-select {
   width: 95vw;
-  height: 6.5vh;
+  height: 30px;
   min-height: 50px;
 	background: var(--paths);
 	border-radius: 1vh;
 	border: 1.5px solid var(--concrete-path);
-	z-index: 9000;
-	position: absolute;
-	top: 2.5%;
+	position: fixed;
+	top: 15px;
 	left: 2.5vw;
 }
 
